--- a/blocks/Hero/hero_1.html
+++ b/blocks/Hero/hero_1.html
@@ -37,7 +37,7 @@
               <div class="_hero_1_root_right_wrap">
                 <div class="_hero_1_root_right_img_wrap">
                   <img
-                    src="assets/images/headerimage.png"
+                    src="../../assets/img/hero/headerimage.png"
                     alt="Header Image"
                     class="_hero_1_root_right_img"
                   />
@@ -48,7 +48,7 @@
         </div>
         <div class="_hero_1_root_pattern_wrap">
           <img
-            src="assets/images/headerpattern.png"
+            src="../../assets/img/hero/headerpattern.png"
             alt="Hero Pattern"
             class="_hero_1_root_pattern"
           />
