--- a/blocks/Hero/hero_1.html
+++ b/blocks/Hero/hero_1.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>BootBlox | Blog 1</title>
-    <link rel="stylesheet" href="../../cdn/css/hero.css" />
+    <title>BlockTheBuilder | Hero 1</title>
+    <link rel="stylesheet" href="../../cdn/css/main.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
