--- a/blocks/Header/header_1.html
+++ b/blocks/Header/header_1.html
@@ -1,175 +1,200 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zxx">
   <head>
+    <!-- Required meta tags -->
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link rel="stylesheet" href="../../cdn/css/main.css" />
+    <title>15299_root_project_management_website</title>
+    <!-- Fonts -->
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap"
+      rel="stylesheet"
+    />
+    <!-- Bootstrap -->
+    <!-- CSS only -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
       crossorigin="anonymous"
     />
+    <!-- Custom CSS -->
+    <link rel="stylesheet" href="../../cdn/css/main.css" />
+    <!-- JavaScript Bundle with Popper -->
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
+      crossorigin="anonymous"
+    ></script>
   </head>
+
   <body>
-    <header class="_hero_1_root_wrapper">
-      <!-- Navbar start -->
-      <nav
-        class="navbar navbar-expand-lg navbar-light bg-light _hero_root_navbar"
-      >
-        <div class="container">
-          <div class="_logo_wrap">
-            <a class="navbar-brand _logo" href="#0">
-              <img class="_nav_logo" src="assets/images/logo.svg" alt="Logo" />
-            </a>
+    <!-- Header  Section -->
+    <section>
+      <header class="_hero_1_root_wrapper">
+        <!-- Navbar start -->
+        <nav
+          class="navbar navbar-expand-lg navbar-light bg-light _hero_1_root_navbar"
+        >
+          <div class="container">
+            <div class="_logo_wrap">
+              <a class="navbar-brand _logo" href="#0">
+                <img
+                  class="_nav_logo"
+                  src="../../assets/img/logo.png"
+                  alt="Logo"
+                />
+              </a>
+            </div>
+            <button
+              class="navbar-toggler _toggler collapsed"
+              type="button"
+              data-bs-toggle="collapse"
+              data-bs-target="#navbarNav"
+              aria-controls="navbarNav"
+              aria-expanded="false"
+              aria-label="Toggle navigation"
+            >
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+              <ul class="navbar-nav _hero_1_root_nav">
+                <li
+                  class="nav-item _hero_1_root_nav_item _hero_1_root_nav_drop dropdown"
+                >
+                  <a
+                    class="nav-link _hero_1_root_nav_link _hero_1_root_nav_drop_link dropdown-toggle"
+                    href="#"
+                    id="DropdownMenu1"
+                    role="button"
+                    data-bs-toggle="dropdown"
+                    aria-expanded="false"
+                  >
+                    Solutions
+                    <svg
+                      xmlns="http://www.w3.org/2000/svg"
+                      width="9"
+                      height="5"
+                      fill="none"
+                      viewBox="0 0 9 5"
+                    >
+                      <path
+                        stroke="#644A96"
+                        stroke-linecap="round"
+                        stroke-linejoin="round"
+                        stroke-width="1.5"
+                        d="M7.8.9L4.5 4.063 1.2.9"
+                      />
+                    </svg>
+                  </a>
+                  <ul
+                    class="dropdown-menu dropdown-menu-light"
+                    aria-labelledby="DropdownMenu1"
+                  >
+                    <li><a class="dropdown-item" href="#">item 1</a></li>
+                    <li><a class="dropdown-item" href="#">item 2</a></li>
+                    <li><a class="dropdown-item" href="#">item 3</a></li>
+                  </ul>
+                </li>
+                <li
+                  class="nav-item _hero_1_root_nav_item _hero_1_root_nav_drop dropdown"
+                >
+                  <a
+                    class="nav-link _hero_1_root_nav_link _hero_1_root_nav_drop_link dropdown-toggle"
+                    href="#"
+                    id="DropdownMenu2"
+                    role="button"
+                    data-bs-toggle="dropdown"
+                    aria-expanded="false"
+                  >
+                    Product
+                    <svg
+                      xmlns="http://www.w3.org/2000/svg"
+                      width="9"
+                      height="5"
+                      fill="none"
+                      viewBox="0 0 9 5"
+                    >
+                      <path
+                        stroke="#644A96"
+                        stroke-linecap="round"
+                        stroke-linejoin="round"
+                        stroke-width="1.5"
+                        d="M7.8.9L4.5 4.063 1.2.9"
+                      />
+                    </svg>
+                  </a>
+                  <ul
+                    class="dropdown-menu dropdown-menu-light"
+                    aria-labelledby="DropdownMenu2"
+                  >
+                    <li><a class="dropdown-item" href="#">item 1</a></li>
+                    <li><a class="dropdown-item" href="#">item 2</a></li>
+                    <li><a class="dropdown-item" href="#">item 3</a></li>
+                  </ul>
+                </li>
+                <li
+                  class="nav-item _hero_1_root_nav_item _hero_1_root_nav_drop dropdown"
+                >
+                  <a
+                    class="nav-link _hero_1_root_nav_link _hero_1_root_nav_drop_link dropdown-toggle"
+                    href="#"
+                    id="DropdownMenu3"
+                    role="button"
+                    data-bs-toggle="dropdown"
+                    aria-expanded="false"
+                  >
+                    Resources
+                    <svg
+                      xmlns="http://www.w3.org/2000/svg"
+                      width="9"
+                      height="5"
+                      fill="none"
+                      viewBox="0 0 9 5"
+                    >
+                      <path
+                        stroke="#644A96"
+                        stroke-linecap="round"
+                        stroke-linejoin="round"
+                        stroke-width="1.5"
+                        d="M7.8.9L4.5 4.063 1.2.9"
+                      />
+                    </svg>
+                  </a>
+                  <ul
+                    class="dropdown-menu dropdown-menu-light"
+                    aria-labelledby="DropdownMenu3"
+                  >
+                    <li><a class="dropdown-item" href="#">item 1</a></li>
+                    <li><a class="dropdown-item" href="#">item 2</a></li>
+                    <li><a class="dropdown-item" href="#">item 3</a></li>
+                  </ul>
+                </li>
+                <li class="nav-item _hero_1_root_nav_item">
+                  <a class="nav-link _hero_1_root_nav_link" href="#0"
+                    >Pricing</a
+                  >
+                </li>
+              </ul>
+              <ul class="navbar-nav _hero_1_root_nav_right">
+                <li class="nav-item _hero_1_root_nav_item">
+                  <a class="nav-link _hero_1_root_nav_link _login" href="#0"
+                    >Log in</a
+                  >
+                </li>
+                <li class="nav-item _hero_1_root_nav_item">
+                  <a class="nav-link _hero_1_root_nav_btn _trial_btn" href="#0"
+                    >Start 7-day trial</a
+                  >
+                </li>
+              </ul>
+            </div>
           </div>
-          <button
-            class="navbar-toggler _toggler collapsed"
-            type="button"
-            data-bs-toggle="collapse"
-            data-bs-target="#navbarNav"
-            aria-controls="navbarNav"
-            aria-expanded="false"
-            aria-label="Toggle navigation"
-          >
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav _hero_root_nav">
-              <li
-                class="nav-item _hero_root_nav_item _hero_root_nav_drop dropdown"
-              >
-                <a
-                  class="nav-link _hero_root_nav_link _hero_root_nav_drop_link dropdown-toggle"
-                  href="#"
-                  id="DropdownMenu1"
-                  role="button"
-                  data-bs-toggle="dropdown"
-                  aria-expanded="false"
-                >
-                  Solutions
-                  <svg
-                    xmlns="http://www.w3.org/2000/svg"
-                    width="9"
-                    height="5"
-                    fill="none"
-                    viewBox="0 0 9 5"
-                  >
-                    <path
-                      stroke="#644A96"
-                      stroke-linecap="round"
-                      stroke-linejoin="round"
-                      stroke-width="1.5"
-                      d="M7.8.9L4.5 4.063 1.2.9"
-                    />
-                  </svg>
-                </a>
-                <ul
-                  class="dropdown-menu dropdown-menu-light"
-                  aria-labelledby="DropdownMenu1"
-                >
-                  <li><a class="dropdown-item" href="#">item 1</a></li>
-                  <li><a class="dropdown-item" href="#">item 2</a></li>
-                  <li><a class="dropdown-item" href="#">item 3</a></li>
-                </ul>
-              </li>
-              <li
-                class="nav-item _hero_root_nav_item _hero_root_nav_drop dropdown"
-              >
-                <a
-                  class="nav-link _hero_root_nav_link _hero_root_nav_drop_link dropdown-toggle"
-                  href="#"
-                  id="DropdownMenu2"
-                  role="button"
-                  data-bs-toggle="dropdown"
-                  aria-expanded="false"
-                >
-                  Product
-                  <svg
-                    xmlns="http://www.w3.org/2000/svg"
-                    width="9"
-                    height="5"
-                    fill="none"
-                    viewBox="0 0 9 5"
-                  >
-                    <path
-                      stroke="#644A96"
-                      stroke-linecap="round"
-                      stroke-linejoin="round"
-                      stroke-width="1.5"
-                      d="M7.8.9L4.5 4.063 1.2.9"
-                    />
-                  </svg>
-                </a>
-                <ul
-                  class="dropdown-menu dropdown-menu-light"
-                  aria-labelledby="DropdownMenu2"
-                >
-                  <li><a class="dropdown-item" href="#">item 1</a></li>
-                  <li><a class="dropdown-item" href="#">item 2</a></li>
-                  <li><a class="dropdown-item" href="#">item 3</a></li>
-                </ul>
-              </li>
-              <li
-                class="nav-item _hero_root_nav_item _hero_root_nav_drop dropdown"
-              >
-                <a
-                  class="nav-link _hero_root_nav_link _hero_root_nav_drop_link dropdown-toggle"
-                  href="#"
-                  id="DropdownMenu3"
-                  role="button"
-                  data-bs-toggle="dropdown"
-                  aria-expanded="false"
-                >
-                  Resources
-                  <svg
-                    xmlns="http://www.w3.org/2000/svg"
-                    width="9"
-                    height="5"
-                    fill="none"
-                    viewBox="0 0 9 5"
-                  >
-                    <path
-                      stroke="#644A96"
-                      stroke-linecap="round"
-                      stroke-linejoin="round"
-                      stroke-width="1.5"
-                      d="M7.8.9L4.5 4.063 1.2.9"
-                    />
-                  </svg>
-                </a>
-                <ul
-                  class="dropdown-menu dropdown-menu-light"
-                  aria-labelledby="DropdownMenu3"
-                >
-                  <li><a class="dropdown-item" href="#">item 1</a></li>
-                  <li><a class="dropdown-item" href="#">item 2</a></li>
-                  <li><a class="dropdown-item" href="#">item 3</a></li>
-                </ul>
-              </li>
-              <li class="nav-item _hero_root_nav_item">
-                <a class="nav-link _hero_root_nav_link" href="#0">Pricing</a>
-              </li>
-            </ul>
-            <ul class="navbar-nav _hero_root_nav_right">
-              <li class="nav-item _hero_root_nav_item">
-                <a class="nav-link _hero_root_nav_link _login" href="#0"
-                  >Log in</a
-                >
-              </li>
-              <li class="nav-item _hero_root_nav_item">
-                <a class="nav-link _hero_root_nav_btn _trial_btn" href="#0"
-                  >Start 7-day trial</a
-                >
-              </li>
-            </ul>
-          </div>
-        </div>
-      </nav>
-      <!-- Navbar ends -->
-    </header>
-    er
+        </nav>
+        <!-- Navbar ends -->
+      </header>
+    </section>
   </body>
 </html>
