--- a/blocks/feature/feature_1.html
+++ b/blocks/feature/feature_1.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>BlockTheBuilder | Hero 1</title>
+    <title>BlockTheBuilder | Feature 1</title>
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
