feature 2 added with complte font google family cdn

--- a/blocks/feature/feature_2.html
+++ b/blocks/feature/feature_2.html
@@ -8,7 +8,7 @@
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap"
+      href="https://cdn.jsdelivr.net/npm/google-fonts-complete@2.1.1/google-fonts.json"
       rel="stylesheet"
     />
     <!-- Bootstrap -->
@@ -33,115 +33,225 @@
     />
   </head>
   <body>
-    <!-- Collaborate section start -->
-    <section class="_collab_1_1_root_sec pt-5">
-      <div class="_collab_1_1_root_wrap">
+    <!-- Feature 2 section start -->
+    <section class="_feature_2_aihut_wrapper">
+      <div class="_feature_2_aihut_wrap">
         <div class="container">
-          <div class="row">
-            <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12">
-              <div class="_collab_1_root_title_wrap">
-                <h2 class="_collab_1_root_title">How can we collaborate</h2>
-                <p class="_collab_1_root_txt">we make your product best</p>
+          <div class="row align-items-center">
+            <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12">
+              <div class="_feature_2_aihut_lft_wrap">
+                <h2 class="_feature_2_aihut_lft_t">
+                  <span class="_feature_2_aihut_lft_t_sp">30+</span> content
+                  generating tools
+                </h2>
+                <p class="_feature_2_aihut_lft_p">
+                  We have several resources for you to choose from. You will
+                  find blog topic ideas, sales email templates, and even a
+                  keyword generator.
+                </p>
+                <div class="_feature_2_aihut_lft_a">
+                  <a href="#0" class="_feature_2_aihut_lft_a1"
+                    >Try for free
+                    <svg
+                      xmlns="http://www.w3.org/2000/svg"
+                      width="16"
+                      height="16"
+                      fill="none"
+                      viewBox="0 0 16 16"
+                    >
+                      <path
+                        stroke="#3D85FF"
+                        stroke-linecap="round"
+                        stroke-linejoin="round"
+                        stroke-width="1.5"
+                        d="M2.5 8h11M9 3.5L13.5 8 9 12.5"
+                      />
+                    </svg>
+                  </a>
+                </div>
               </div>
             </div>
-          </div>
-          <div class="_collab_1_root_card_wrap">
-            <div class="row justify-content-center">
-              <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12">
-                <div class="_collab_1_root_card">
-                  <div class="_collab_1_root_card_inner">
-                    <div class="_collab_1_root_card1_ic_wrap">
-                      <i class="las la-pen _collab_1_root_card_ic"></i>
-                    </div>
-                    <div class="_collab_1_root_card_con">
-                      <h4 class="_collab_1_root_card_con_title">
-                        Better Planing
-                      </h4>
-                      <p class="_collab_1_root_card_con_txt">
-                        project is a temporary endeavor designed to produce a
-                        unique product, service, or result
-                      </p>
-                      <a href="#0" class="_collab_1_root_card_con_link"
-                        >Learn More
-                        <svg
-                          xmlns="http://www.w3.org/2000/svg"
-                          width="8"
-                          height="10"
-                          fill="none"
-                          viewBox="0 0 8 10"
-                        >
-                          <path
-                            fill="#9EA2B1"
-                            d="M.91 1.18L4.731 5 .911 8.82 2.09 10l5-5-5-5L.91 1.18z"
-                          />
-                        </svg>
-                      </a>
+            <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12">
+              <div class="_feature_2_aihut_r8_wrap">
+                <div class="row">
+                  <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-6">
+                    <div class="_feature_2_aihut_r8_wrap_part1">
+                      <div class="_feature_2_aihut_r8_crd1">
+                        <div class="_feature_2_aihut_r8_crd_ic1">
+                          <svg
+                            xmlns="http://www.w3.org/2000/svg"
+                            width="30"
+                            height="30"
+                            fill="none"
+                            viewBox="0 0 30 30"
+                          >
+                            <path
+                              fill="#fff"
+                              fill-rule="evenodd"
+                              d="M11.72 25.035l10.983-14.203c.597-.766.81-1.652.61-2.553-.172-.82-.676-1.6-1.432-2.19l-1.844-1.465c-1.605-1.277-3.594-1.142-4.735.322l-1.234 1.6c-.159.2-.12.497.08.658l3.183 2.553c.213.201.372.47.412.793a1.18 1.18 0 01-1.022 1.303 1.058 1.058 0 01-.809-.228l-3.276-2.607a.39.39 0 00-.53.067L4.318 19.163a2.666 2.666 0 00-.504 2.244l.995 4.313a.5.5 0 00.49.39l4.378-.054a2.63 2.63 0 002.042-1.021zm6.13-1.343h7.138c.697 0 1.263.573 1.263 1.279 0 .707-.566 1.28-1.263 1.28h-7.137a1.272 1.272 0 01-1.263-1.28c0-.706.566-1.28 1.263-1.28z"
+                              clip-rule="evenodd"
+                            />
+                          </svg>
+                        </div>
+                        <div class="_feature_2_aihut_r8_crd_cont">
+                          <h6 class="_feature_2_aihut_r8_crd_cont_t">
+                            Article generation
+                          </h6>
+                          <p class="_feature_2_aihut_r8_crd_cont_p">
+                            - Blog Article Writer
+                          </p>
+                          <p class="_feature_2_aihut_r8_crd_cont_p1">
+                            - Blog Ideas, Intros
+                          </p>
+                        </div>
+                      </div>
+                      <div class="_feature_2_aihut_r8_crd1">
+                        <div class="_feature_2_aihut_r8_crd_ic2">
+                          <svg
+                            xmlns="http://www.w3.org/2000/svg"
+                            width="30"
+                            height="30"
+                            fill="none"
+                            viewBox="0 0 30 30"
+                          >
+                            <path
+                              fill="#fff"
+                              fill-rule="evenodd"
+                              d="M21.163 8.75a.627.627 0 00.054-.282h.033C21.11 5.132 18.356 2.5 15.006 2.5c-3.35 0-6.104 2.632-6.244 5.968a.81.81 0 000 .282h-.097c-1.602 0-3.315 1.057-3.812 3.9l-.972 7.743C3.086 26.08 6.013 27.5 9.836 27.5h10.362c3.811 0 6.65-2.058 5.944-7.107l-.962-7.743c-.585-2.763-2.242-3.9-3.822-3.9h-.195zm-1.797 0a.81.81 0 01-.054-.282c0-2.397-1.95-4.34-4.355-4.34a4.347 4.347 0 00-4.355 4.34.81.81 0 010 .282h8.764zm-7.996 6.436c-.61 0-1.104-.51-1.104-1.137 0-.628.494-1.137 1.104-1.137.61 0 1.105.509 1.105 1.137s-.495 1.137-1.105 1.137zm6.132-1.137c0 .628.495 1.137 1.105 1.137s1.104-.51 1.104-1.137c0-.628-.494-1.137-1.104-1.137-.61 0-1.105.509-1.105 1.137z"
+                              clip-rule="evenodd"
+                            />
+                          </svg>
+                        </div>
+                        <div class="_feature_2_aihut_r8_crd_cont">
+                          <h6 class="_feature_2_aihut_r8_crd_cont_t">
+                            eCommerce copy
+                          </h6>
+                          <p class="_feature_2_aihut_r8_crd_cont_p">
+                            - Product Descriptions
+                          </p>
+                          <p class="_feature_2_aihut_r8_crd_cont_p1">
+                            - Product Benefits
+                          </p>
+                        </div>
+                      </div>
+                      <div class="_feature_2_aihut_r8_crd1">
+                        <div class="_feature_2_aihut_r8_crd_ic3">
+                          <svg
+                            xmlns="http://www.w3.org/2000/svg"
+                            width="30"
+                            height="30"
+                            fill="none"
+                            viewBox="0 0 30 30"
+                          >
+                            <path
+                              fill="#fff"
+                              fill-rule="evenodd"
+                              d="M24.701 15.001c0 1.017.835 1.845 1.861 1.845.518 0 .938.416.938.928v3.346c0 2.829-2.323 5.13-5.177 5.13H7.679c-2.855 0-5.179-2.301-5.179-5.13v-3.346c0-.512.42-.928.938-.928A1.855 1.855 0 005.3 15c0-.99-.801-1.736-1.862-1.736a.94.94 0 01-.663-.273.925.925 0 01-.275-.656l.002-3.455c0-2.828 2.323-5.131 5.178-5.131h14.64c2.855 0 5.179 2.303 5.179 5.131l.001 3.347a.926.926 0 01-.274.656.94.94 0 01-.663.273 1.855 1.855 0 00-1.862 1.844zm-6.886.81l1.474-1.423a.9.9 0 00.234-.941.913.913 0 00-.745-.62l-2.036-.295-.912-1.829a.921.921 0 00-.827-.511h-.002a.924.924 0 00-.83.51l-.91 1.83-2.033.293a.92.92 0 00-.75.622.905.905 0 00.234.941l1.473 1.422-.347 2.01a.909.909 0 00.369.898.927.927 0 00.971.068L15 17.838l1.82.946a.916.916 0 00.974-.067.904.904 0 00.37-.897l-.349-2.01z"
+                              clip-rule="evenodd"
+                            />
+                          </svg>
+                        </div>
+                        <div class="_feature_2_aihut_r8_crd_cont">
+                          <h6 class="_feature_2_aihut_r8_crd_cont_t">
+                            Ad copy
+                          </h6>
+                          <p class="_feature_2_aihut_r8_crd_cont_p">
+                            - Google Ads
+                          </p>
+                          <p class="_feature_2_aihut_r8_crd_cont_p1">
+                            - Facebook Ads
+                          </p>
+                        </div>
+                      </div>
                     </div>
                   </div>
-                </div>
-              </div>
-              <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12">
-                <div class="_collab_1_root_card">
-                  <div class="_collab_1_root_card_inner">
-                    <div class="_collab_1_root_card2_ic_wrap">
-                      <i class="las la-chart-line"></i>
-                    </div>
-                    <div class="_collab_1_root_card_con">
-                      <h4 class="_collab_1_root_card_con_title">
-                        Traffic Monitor
-                      </h4>
-                      <p class="_collab_1_root_card_con_txt">
-                        goals and objectives, typically to bring about
-                        beneficial change or added value.
-                      </p>
-                      <a href="#0" class="_collab_1_root_card_con_link"
-                        >Learn More
-                        <svg
-                          xmlns="http://www.w3.org/2000/svg"
-                          width="8"
-                          height="10"
-                          fill="none"
-                          viewBox="0 0 8 10"
-                        >
-                          <path
-                            fill="#9EA2B1"
-                            d="M.91 1.18L4.731 5 .911 8.82 2.09 10l5-5-5-5L.91 1.18z"
-                          />
-                        </svg>
-                      </a>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12">
-                <div class="_collab_1_root_card">
-                  <div class="_collab_1_root_card_inner">
-                    <div class="_collab_1_root_card3_ic_wrap">
-                      <i class="las la-road"></i>
-                    </div>
-                    <div class="_collab_1_root_card_con">
-                      <h4 class="_collab_1_root_card_con_title">
-                        Product Journey
-                      </h4>
-                      <p class="_collab_1_root_card_con_txt">
-                        The temporary nature of projects stands in contrast with
-                        business as usual (or operations)
-                      </p>
-                      <a href="#0" class="_collab_1_root_card_con_link"
-                        >Learn More
-                        <svg
-                          xmlns="http://www.w3.org/2000/svg"
-                          width="8"
-                          height="10"
-                          fill="none"
-                          viewBox="0 0 8 10"
-                        >
-                          <path
-                            fill="#9EA2B1"
-                            d="M.91 1.18L4.731 5 .911 8.82 2.09 10l5-5-5-5L.91 1.18z"
-                          />
-                        </svg>
-                      </a>
+                  <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-6">
+                    <div class="_feature_2_aihut_r8_wrap_part2">
+                      <div class="_feature_2_aihut_r8_crd2">
+                        <div class="_feature_2_aihut_r8_crd_ic2">
+                          <svg
+                            xmlns="http://www.w3.org/2000/svg"
+                            width="30"
+                            height="30"
+                            fill="none"
+                            viewBox="0 0 30 30"
+                          >
+                            <path
+                              fill="#fff"
+                              fill-rule="evenodd"
+                              d="M11.125 2.5h7.712c3.388 0 6.125 1.337 6.163 4.737v18.975c0 .213-.05.425-.15.613-.163.3-.438.525-.775.625-.325.1-.688.05-.988-.125l-8.1-4.05-8.112 4.05a1.33 1.33 0 01-.612.163A1.27 1.27 0 015 26.212V7.238C5 3.838 7.75 2.5 11.125 2.5zm-.85 9.525h9.413a.98.98 0 00.975-.988.979.979 0 00-.975-.987h-9.412a.979.979 0 00-.975.987.98.98 0 00.975.988z"
+                              clip-rule="evenodd"
+                            />
+                          </svg>
+                        </div>
+                        <div class="_feature_2_aihut_r8_crd_cont">
+                          <h6 class="_feature_2_aihut_r8_crd_cont_t">
+                            Social media content
+                          </h6>
+                          <p class="_feature_2_aihut_r8_crd_cont_p">
+                            - Inspiration Ideas
+                          </p>
+                          <p class="_feature_2_aihut_r8_crd_cont_p1">
+                            - YouTube Titles
+                          </p>
+                        </div>
+                      </div>
+                      <div class="_feature_2_aihut_r8_crd2">
+                        <div class="_feature_2_aihut_r8_crd_ic3">
+                          <svg
+                            xmlns="http://www.w3.org/2000/svg"
+                            width="30"
+                            height="30"
+                            fill="none"
+                            viewBox="0 0 30 30"
+                          >
+                            <path
+                              fill="#fff"
+                              fill-rule="evenodd"
+                              d="M9.762 2.5H20.24c3.861 0 6.011 2.225 6.011 6.037V21.45c0 3.875-2.15 6.05-6.011 6.05H9.762c-3.8 0-6.012-2.175-6.012-6.05V8.538C3.75 4.724 5.963 2.5 9.762 2.5zm.338 5.825v-.012h3.736c.539 0 .976.437.976.973a.98.98 0 01-.976.989H10.1a.975.975 0 010-1.95zm0 7.6h9.8a.976.976 0 000-1.951h-9.8a.977.977 0 000 1.95zm0 5.712h9.8a.978.978 0 00.874-.974.98.98 0 00-.875-.988h-9.8a.994.994 0 00-.937 1.512c.2.313.562.5.937.45z"
+                              clip-rule="evenodd"
+                            />
+                          </svg>
+                        </div>
+                        <div class="_feature_2_aihut_r8_crd_cont">
+                          <h6 class="_feature_2_aihut_r8_crd_cont_t">
+                            Sales copy
+                          </h6>
+                          <p class="_feature_2_aihut_r8_crd_cont_p">- AIDA</p>
+                          <p class="_feature_2_aihut_r8_crd_cont_p1">
+                            - Pain-Agitate-Solution
+                          </p>
+                        </div>
+                      </div>
+                      <div class="_feature_2_aihut_r8_crd2">
+                        <div class="_feature_2_aihut_r8_crd_ic1">
+                          <svg
+                            xmlns="http://www.w3.org/2000/svg"
+                            width="30"
+                            height="30"
+                            fill="none"
+                            viewBox="0 0 30 30"
+                          >
+                            <path
+                              fill="#fff"
+                              fill-rule="evenodd"
+                              d="M15.408 2.762c.2-.18.464-.273.734-.261 5.714.171 10.489 4.319 11.354 9.862a.304.304 0 010 .1.977.977 0 01-.246.72 1.015 1.015 0 01-.693.335l-9.6.633a1.146 1.146 0 01-.867-.287 1.101 1.101 0 01-.367-.823l-.645-9.43v-.155a.992.992 0 01.33-.694zm-.658 13.855l8.287-.51h.09c.357.005.697.15.945.402.249.252.385.59.379.94-.328 4.778-3.83 8.77-8.598 9.799-4.766 1.028-9.653-1.154-11.993-5.356a10.27 10.27 0 01-1.28-3.92 7.444 7.444 0 01-.079-1.233c.016-5.08 3.633-9.465 8.694-10.54a1.377 1.377 0 011.494.744c.132.2.167.443.182.682.088 1.342.178 2.674.268 4 .078 1.14.155 2.278.23 3.415a2.35 2.35 0 00.124.788c.203.5.709.818 1.257.789z"
+                              clip-rule="evenodd"
+                            />
+                          </svg>
+                        </div>
+                        <div class="_feature_2_aihut_r8_crd_cont">
+                          <h6 class="_feature_2_aihut_r8_crd_cont_t">
+                            Startup tools
+                          </h6>
+                          <p class="_feature_2_aihut_r8_crd_cont_p">
+                            - Slogan Generator
+                          </p>
+                          <p class="_feature_2_aihut_r8_crd_cont_p1">
+                            - Audience Refiner
+                          </p>
+                        </div>
+                      </div>
                     </div>
                   </div>
                 </div>
@@ -151,6 +261,6 @@
         </div>
       </div>
     </section>
-    <!-- Collaborate section ends -->
+    <!-- Feature 2 section ends -->
   </body>
 </html>
