--- a/blocks/ctc/ctc_1.html
+++ b/blocks/ctc/ctc_1.html
@@ -8,7 +8,7 @@
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap"
+      href="https://cdn.jsdelivr.net/npm/google-fonts-complete@2.1.1/google-fonts.json"
       rel="stylesheet"
     />
     <!-- Bootstrap -->
