--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
               class="btn_blue navbar-btn ptr-events-none text-white"
             >
               <i class="p-2 las la-bars"></i>
-              <span class="d-none d-md-inline-block"> BlackTheBuilder</span>
+              <span class="d-none d-md-inline-block"> BlockTheBuilder</span>
             </button>
             <div
               id="nav-tools"
